- FIX: private conf not accessible from other modules (IVY-76)
- FIX: root module configurations isolation bug fixed (IVY-84)
- FIX: changed the place where ivy stores master ivy files in cache to not overlap
       with dependencies one (IVY-85)
- FIX: bug in ResourceHelper didn't let override resource easily (IVY-80)
- FIX: throws a circular dependency exception when a circular dependency is found 
       instead of failing silently (IVY-79)

   version 1.2a - 2005-09-14
===============================
Note : version 1.2 previously published on ivy site was not the real 1.2 due to a bad release operation
       version 1.2a should then be used instead
       
- new ivy.deps.changed property set if there are changes since last resolve (IVY-71)
- new buildlist task: calculate order of dependencies of subprojects for easy multi-projects builds (IVY-69)
- accept organization as token (IVY-55)
- added type filtering mechanism on resolve task (IVY-45)
- detect and warn about resolver using ivy cache as repository (IVY-53)
- new transitive attribute on dependency, which enable to disable transitive dependency
  management on a particular dependency (thanks to Ingo Adler) (IVY-20)
- new '@' in dependency configuration mapping declaration, used to indicate that a configuration maps to itself
  useful with *, '*->@' meaning that all configurations of the module maps to their equivalent (same name)
  in the dependency (IVY-52)
- new changing attribute on dependencies indicate that the dependency artifacts
  may change even without revision change, but with only a new ivy file with new 
  publication date
- new useRemoteConfig on conf tag in ivyconf.xml, tells to use remote configuration file
  for repository config
- new type filtering in cachepath task
- new cachefileset task: builds an ant fileset of artifacts in cache
- publish task now uses srcivypattern for ivy files finding and for delivery
- better debug and error messages (IVY-60 IVY-61)