@@ -476,6 +476,153 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testFromCacheOnly
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/bugIVY-56/ivyconf.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//        ResolveReport report = ivy.resolve(new File("test/repositories/1/org1/mod1.1/ivys/ivy-1.0.xml").toURL(),
+comment|//                null, new String[] {"*"}, _cache, null, true);
+comment|//        // should have an error, the conf is bad and the dependency should not be found
+comment|//        assertTrue(report.hasError());
+comment|// put necessary stuff in cache, and it should now be ok
+name|File
+name|ivyfile
+init|=
+name|ivy
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|File
+name|art
+init|=
+name|ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+decl_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+name|ResolveTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivy-mod1.2.xml"
+argument_list|)
+argument_list|,
+name|ivyfile
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.2/jars/mod1.2-2.0.jar"
+argument_list|)
+argument_list|,
+name|art
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.1/ivys/ivy-1.0.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testChangeCacheLayout
 parameter_list|()
 throws|throws
